--- a/hydra-login-consent/templates/error.html
+++ b/hydra-login-consent/templates/error.html
@@ -11,8 +11,8 @@
 <body class="bg-white transition-opacity duration-150 !opacity-100">
     <div class="flex flex-col items-center justify-center min-h-screen bg-gray-50">
         <div class="w-full max-w-md p-8 space-y-6 bg-white rounded-lg shadow-md">
-            <h1 class="text-2xl font-bold text-center text-gray-900">Error</h1>
-            <p class="text-sm text-center text-gray-500">{{ .Error }}</p>
+            <h1 class="text-2xl font-bold text-center text-gray-900">Error ({{ .ErrorTitle }})</h1>
+            <p class="text-sm text-center text-gray-500">{{ .ErrorDescription }}</p>
             <!-- <div class="flex flex-col space-y-4">
                 <a href="{{ .RedirectUri }}"
                     class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-zinc-900 text-zinc-50 hover:bg-zinc-800 h-10 px-4 py-2 w-full">
