feat: add name field

--- a/hydra-login-consent/templates/login.html
+++ b/hydra-login-consent/templates/login.html
@@ -11,14 +11,28 @@
 <body class="bg-white transition-opacity duration-150 !opacity-100">
     <div class="flex flex-col items-center justify-center min-h-screen bg-gray-50">
         <form action="" method="post">
-            <div class="w-full max-w-md p-8 space-y-6 bg-white rounded-lg shadow-md">
+            <div class="w-full max-w-md p-8 space-y-6 bg-white rounded-lg shadow-md space-y-2">
                 <h1 class="text-2xl font-bold text-center text-gray-900">Login</h1>
 
                 <input type="hidden" name="challenge" value="{{ .Challenge }}">
 
                 <div class="flex flex-col my-4 space-y-4">
+                    <label for="name"
+                        class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70">
+                        Name
+                        <span class="text-red-500">*</span>
+                    </label>
+                    <input type="string" id="name" name="name"
+                        class="flex h-10 w-full rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
+                        value="{{ .Name }}" required>
+                </div>
+
+                <div class="flex flex-col my-4 space-y-4">
                     <label for="email"
-                        class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70">Email</label>
+                        class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70">
+                        Email
+                        <span class="text-red-500">*</span>
+                    </label>
                     <input type="email" id="email" name="email"
                         class="flex h-10 w-full rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
                         value="{{ .LoginHint }}" required>
