feat: add robots txt, analytics and improve perf

--- a/hydra-login-consent/templates/index.html
+++ b/hydra-login-consent/templates/index.html
@@ -1,11 +1,16 @@
+<!doctype html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="/css/main.css" rel="stylesheet">
+
+    <link href="https://a.cerberauth.com" rel="preconnect" crossorigin />
+    <script defer data-domain="testid.cerberauth.com" src="https://a.cerberauth.com/js/script.outbound-links.js"></script>
 
     <title>TestID - OpenID Connect Provider for testing and development environments</title>
+    <meta name="description" content="TestID is an OpenID Connect Provider existing for testing and development environments.">
 </head>
 
 <body class="bg-slate-100 min-h-screen">
@@ -51,7 +56,8 @@
             and OAuth
             Provider developed by <a class="text-indigo-600" href="https://www.ory.sh/">Ory</a>.</p>
         <p class="text-sm text-gray-500">Proudly part of <a class="text-indigo-600"
-                href="https://www.cerberauth.com?utm_source=testid">CerberAuth</a> community. CerberAuth is not affiliated in any way with
+                href="https://www.cerberauth.com?utm_source=testid">CerberAuth</a> community. CerberAuth is not
+            affiliated in any way with
             Ory Corp.</p>
     </footer>
 </body>
