--- a/hydra-login-consent/templates/login.html
+++ b/hydra-login-consent/templates/login.html
@@ -1,9 +1,13 @@
+<!doctype html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="/css/main.css" rel="stylesheet">
+
+    <link href="https://a.cerberauth.com" rel="preconnect" crossorigin />
+    <script defer data-domain="testid.cerberauth.com" src="https://a.cerberauth.com/js/script.outbound-links.js"></script>
 
     <title>Login</title>
 </head>
