chore: open source testid

--- a/hydra-login-consent/templates/index.html
+++ b/hydra-login-consent/templates/index.html
@@ -7,10 +7,12 @@
     <link href="/css/main.css" rel="stylesheet">
 
     <link href="https://a.cerberauth.com" rel="preconnect" crossorigin />
-    <script defer data-domain="testid.cerberauth.com" src="https://a.cerberauth.com/js/script.outbound-links.js"></script>
+    <script defer data-domain="testid.cerberauth.com"
+        src="https://a.cerberauth.com/js/script.outbound-links.js"></script>
 
     <title>TestID - OpenID Connect Provider for testing and development environments</title>
-    <meta name="description" content="TestID is an OpenID Connect Provider existing for testing and development environments.">
+    <meta name="description"
+        content="TestID is an OpenID Connect Provider existing for testing and development environments.">
 </head>
 
 <body class="bg-slate-100 min-h-screen">
@@ -23,7 +25,7 @@
                 and
                 development environments.</p>
 
-            <a href="https://nacho.cerberauth.com?utm_source=testid"
+            <a href="https://nacho.cerberauth.com/client/create?utm_source=testid"
                 class="inline-flex rounded-lg text-sm font-semibold py-3 px-4 bg-slate-900 text-white hover:bg-slate-700">
                 Create an OpenID Connect Client
             </a>
@@ -51,10 +53,11 @@
     </main>
 
     <footer class="text-center p-4 space-y-4">
-        <p class="text-gray-500">TestID is powered with <a class="text-indigo-600"
-                href="https://github.com/ory/hydra">Ory Hydra</a>, a great Open Source OpenID Certified™ OpenID Connect
-            and OAuth
-            Provider developed by <a class="text-indigo-600" href="https://www.ory.sh/">Ory</a>.</p>
+        <p class="text-gray-500"><a class="text-indigo-600"
+            href="https://github.com/cerberauth/testid?utm_source=testid">TestID is Open Source</a> and powered with <a
+                class="text-indigo-600" href="https://github.com/ory/hydra?utm_source=testid">Ory Hydra</a>, a great
+            Open Source OpenID Certified™ OpenID Connect and OAuth Provider developed by <a class="text-indigo-600"
+                href="https://www.ory.sh/">Ory</a>.</p>
         <p class="text-sm text-gray-500">Proudly part of <a class="text-indigo-600"
                 href="https://www.cerberauth.com?utm_source=testid">CerberAuth</a> community. CerberAuth is not
             affiliated in any way with
