--- a/hydra-login-consent/templates/consent.html
+++ b/hydra-login-consent/templates/consent.html
@@ -25,10 +25,10 @@
                 <h1 class="text-2xl font-bold text-center text-gray-900">Authorize {{ .ClientName }}</h1>
                 <input type="hidden" name="challenge" value="{{ .Challenge }}">
 
-                <p class="text-sm text-center text-gray-500">
+                <p class="text-gray-600">
                     Application {{ .ClientName }} is requesting the following permissions:
                 </p>
-                <ul class="list-disc list-inside text-sm text-gray-500">
+                <ul class="list-disc list-inside text-gray-600">
                     {{ range .RequestedScope }}
                     <li>{{ . }}</li>
                     {{ end }}
@@ -44,7 +44,7 @@
                     </button> -->
                 </div>
                 {{ if or .PolicyUri .TosUri }}
-                <div class="flex justify-center space-x-2 text-sm text-gray-500">
+                <div class="flex justify-center space-x-2 text-sm text-gray-600">
                     {{ if .PolicyUri }}
                     <a class="underline" href="{{ .PolicyUri }}">
                         Privacy Policy
